--- a/talent-studio-application/src/main/java/com/zynap/talentstudio/analysis/reports/jasper/sub_tabular_template.jrxml
+++ b/talent-studio-application/src/main/java/com/zynap/talentstudio/analysis/reports/jasper/sub_tabular_template.jrxml
@@ -10,9 +10,9 @@
 
     <parameter name="subjectUrl" class="java.lang.String"/>
     <parameter name="positionUrl" class="java.lang.String"/>
-    <parameter name="report" class="Report"/>
-    <parameter name="_DS_FACTORY_PARAM" class="JasperDataSourceFactory"/>
-    <parameter name="user" class="User"/>
+    <parameter name="report" class="com.zynap.talentstudio.analysis.reports.Report"/>
+    <parameter name="_DS_FACTORY_PARAM" class="com.zynap.talentstudio.analysis.reports.jasper.JasperDataSourceFactory"/>
+    <parameter name="user" class="com.zynap.domain.admin.User"/>
 
 
 
