pdf download in progress

--- a/talent-studio-views/src/main/webapp/styles/main.css
+++ b/talent-studio-views/src/main/webapp/styles/main.css
@@ -2100,7 +2100,7 @@ iframe.dashboard {
 }
 
 a.edit-img {
-    background-image: url(../images/blue_line.jpg);
+    background-image: url(../images/table-edit.png);
     background-repeat: no-repeat;
     background-position: bottom left;
 }
