--- a/talent-studio-views/src/main/webapp/styles/main.css
+++ b/talent-studio-views/src/main/webapp/styles/main.css
@@ -1058,6 +1058,11 @@ td.infogroup {
     border-width: 2px;
 }
 
+.currency-block {
+    display:inline-block; 
+    white-space: nowrap;
+}
+
 .currency {
     float: left;
     display: inline;
