--- a/talent-studio-views/src/main/webapp/styles/main.css
+++ b/talent-studio-views/src/main/webapp/styles/main.css
@@ -2160,3 +2160,16 @@ img.square-20 {
 
 /*============================================ reporting chart styles =====================================================*/
 
+/*============================================= function styles ============================================================*/
+.mask {
+    display:none;
+}
+
+.mask .ajax {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    background-image: url(../images/icons/ajax-loader.gif);
+}
