--- a/talent-studio-views/src/main/webapp/styles/main.css
+++ b/talent-studio-views/src/main/webapp/styles/main.css
@@ -377,15 +377,16 @@ li.treebranchopen {
 
 /* Styles for footer at bottom of page */
 
-td.footer {
-    padding-top: 2px;
-    padding-bottom: 3px;
+.footer {
+    position:fixed; 
+    bottom:0;
     font-size: 0.9em;
     background-color: #F0E4BE;
     color: black;
     border-style: solid;
     border-width: 1px 0 0 0;
     border-color: #9A9A9A;
+    clear: both;
 }
 
 .copyright {
@@ -462,10 +463,8 @@ div.arenatabs {
     border-style: solid;
     border-width: 0 0 10px 0;
     border-color: #D5D5D5;
-    padding-top: 3px;
     padding-left: 0;
     margin-left: 0;
-    /*display:block;*/
 }
 
 div.loading {
@@ -486,14 +485,14 @@ span.loading {
 
 /* Main area containing tabs */
 
-table.arena_tabbar {
+.arena_tabbar {
     width: 100%;
     border: none;
     padding: 0 0 0 0;
     margin: 0 0 0 0;
 }
 
-.arena_tabbar td {
+.arena_tabbar li {
     border-style: solid;
     border-width: 0 0 1px 0;
     border-color: #9A9A9A;
@@ -526,7 +525,7 @@ td.arena_tabbar_right {
 
 /* Body of tab containing text */
 
-td.arena_tab {
+.arena_tab {
     white-space: nowrap;
     text-align: center;
     font-weight: bold;
@@ -535,7 +534,7 @@ td.arena_tab {
     padding: 3px 6px 3px 6px;
 }
 
-td.arena_active_tab {
+.arena_active_tab {
     border-style: outset;
     border-width: 3px 3px 0 3px;
     border-color: #D5D5D5;
@@ -543,18 +542,18 @@ td.arena_active_tab {
     color: #444488;
 }
 
-td.arena_inactive_tab {
+.arena_inactive_tab {
     border-style: solid;
     border-width: 1px 1px 1px 1px;
     border-color: #9A9A9A;
     color: #666666;
 }
 
-td .arena_inactive_tab.hover {
+.arena_inactive_tab.hover {
     background-color: white;
 }
 
-td .arena_inactive_tab.no_hover {
+.arena_inactive_tab.no_hover {
     background-color: #EEEEEE;
 }
 
@@ -612,7 +611,7 @@ td.tab_tabbar_right {
 
 /* Body of tab containing text */
 
-td.tab_tab {
+.tab_tab {
     white-space: nowrap;
     text-align: center;
     font-weight: bold;
@@ -624,7 +623,7 @@ td.tab_tab {
     color: #444488;
 }
 
-table.tab_tabbar td.tab_active_tab {
+.tab_tabbar .tab_active_tab {
     border-width: 1px 1px 0 1px;
     background-color: white;
 }
@@ -635,7 +634,7 @@ table.tab_tabbar td.tab_active_tab {
     cursor: text;
 }
 
-td.tab_inactive_tab {
+.tab_inactive_tab {
     border-width: 1px 1px 1px 1px;
 }
 
@@ -2161,15 +2160,21 @@ img.square-20 {
 /*============================================ reporting chart styles =====================================================*/
 
 /*============================================= function styles ============================================================*/
-.mask {
-    display:none;
+.full-width {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: initial;
 }
 
-.mask .ajax {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: 1000;
-    background-image: url(../images/icons/ajax-loader.gif);
+table.infobox#ib_nonav {
+    width: 50%;
 }
+
+table.infobox#ib_nonav tbody {
+    border:none;
+}
+
+
+
+
